fix blurry text

--- a/src/assets/styles/5-pages/_preloader.sass
+++ b/src/assets/styles/5-pages/_preloader.sass
@@ -1,10 +1,6 @@
 .preloader
-  display: flex
-  flex-flow: row nowrap
-  justify-content: center
-  align-items: center
-  width: 100%
-  height: 100%
+  width: 100vw
+  height: 100vh
   position: fixed
   top: 0
   left: 0
@@ -13,24 +9,25 @@
   @include bgBaseRules
   visibility: visible
   opacity: 1
-  z-index: 10000
+  z-index: 1000
 
   &.is-hidden
-    animation: fade .25s linear .25s forwards
-
-    .preloader-icon .icon,
-    .preloader-text p span
-      animation-iteration-count: 1
+    animation: fade .5s linear .5s forwards
       
   .preloader-content
-    display: flex
-    flex-flow: row nowrap
     width: 250px
     height: 80px
+    display: flex
+    flex-flow: row nowrap
+    position: absolute
+    top: 50%
+    left: 50%
+    margin-top: -40px
+    margin-left: -125px
 
   .preloader-icon
-    width: 90px
     position: relative
+    width: 90px
     
     .icon
       position: absolute
@@ -83,4 +80,3 @@
   100%
     visibility: hidden
     opacity: 0
-    z-index: -10
